<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margins"
    android:background="@color/base_background"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margins"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rp_pool_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:text="@string/name_land"
            android:textColor="#000"
            android:textSize="@dimen/Text_size" />

        <TextView
            android:id="@+id/rp_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:text="@string/date_of_request"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins">

            <Button
                android:id="@+id/view_rp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:text="@string/view_request" />

            <Button
                android:id="@+id/rp_cancel"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:text="@string/resend_request" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>