<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ashoka.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_digitalize_land"
            app:destination="@id/nav_digitalize_land" />
        <action
            android:id="@+id/action_nav_home_to_what_to_grow2"
            app:destination="@id/what_to_grow2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ashoka.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_digitalize_land"
        android:name="com.example.ashoka.ui.digitizeLand.DigitaliseLand"
        android:label="@string/add_land"
        tools:layout="@layout/digitalise_land_fragment" />

    <fragment
        android:id="@+id/nav_join_create_pool_land"
        android:name="com.example.ashoka.ui.Join_Create_Pool.join_create_pool"
        android:label="@string/join_create_head"
        tools:layout="@layout/join_create_pool_fragment" >
        <action
            android:id="@+id/action_nav_join_create_pool_land_to_pool_nearby"
            app:destination="@id/pool_nearby" />
        <action
            android:id="@+id/action_nav_join_create_pool_land_to_create_pool"
            app:destination="@id/create_pool" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_lands"
        android:name="com.example.ashoka.ui.myLands.myLands"
        android:label="@string/My_lands"
        tools:layout="@layout/my_lands_fragment" />

    <fragment
        android:id="@+id/nav_my_pools"
        android:name="com.example.ashoka.ui.pools.my_pools"
        android:label="@string/My_pools"
        tools:layout="@layout/my_pools_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ashoka.ui.profile.profile"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_request_page"
        android:name="com.example.ashoka.ui.manage_requests.open_page"
        android:label="@string/manage_requests"
        tools:layout="@layout/fragment_open_page" >
        <action
            android:id="@+id/action_nav_request_page_to_rejected_requests_land"
            app:destination="@id/rejected_requests_land" />
        <action
            android:id="@+id/action_nav_request_page_to_pending_requests_land"
            app:destination="@id/pending_requests_land" />
        <action
            android:id="@+id/action_nav_request_page_to_rejected_requests_pool"
            app:destination="@id/rejected_requests_pool" />
        <action
            android:id="@+id/action_nav_request_page_to_pending_requests_pool"
            app:destination="@id/pending_requests_pool" />
    </fragment>
    <fragment
        android:id="@+id/pending_requests_land"
        android:name="com.example.ashoka.ui.manage_requests.pending_requests_land"
        tools:layout="@layout/pending_requests_land_fragment"
        android:label="pending_requests_land" />
    <fragment
        android:id="@+id/rejected_requests_land"
        tools:layout="@layout/rejected_requests_land_fragment"
        android:name="com.example.ashoka.ui.manage_requests.rejected_requests_land"
        android:label="rejected_requests_land" />
    <fragment
        android:id="@+id/pending_requests_pool"
        tools:layout="@layout/pending_requests_pool_fragment"
        android:name="com.example.ashoka.ui.manage_requests.pending_requests_pool"
        android:label="pending_requests_pool" />
    <fragment
        android:id="@+id/rejected_requests_pool"
        tools:layout="@layout/rejected_requests_pool_fragment"
        android:name="com.example.ashoka.ui.manage_requests.rejected_requests_pool"
        android:label="rejected_requests_pool" />
    <fragment
        android:id="@+id/pool_nearby"
        android:name="com.example.ashoka.ui.pools.pool_nearby"
        tools:layout="@layout/pool_nearby_fragment"
        android:label="pool_nearby" />
    <fragment
        android:id="@+id/create_pool"
        tools:layout="@layout/create_pool_fragment"
        android:name="com.example.ashoka.ui.Join_Create_Pool.create_pool"
        android:label="create_pool" />
    <fragment
        android:id="@+id/what_to_grow2"
        android:name="com.example.ashoka.ui.home_params.what_to_grow"
        android:label="@string/to_grow"
        tools:layout="@layout/what_to_grow_fragment" />
    <fragment
        android:id="@+id/aadhaar_email"
        android:name="com.example.ashoka.ui.auth.aadhaar_email"
        android:label="aadhaar_email" >
        <action
            android:id="@+id/action_aadhaar_email_to_pwd_signup"
            app:destination="@id/pwd_signup" />
    </fragment>
    <fragment
        android:id="@+id/name_number"
        android:name="com.example.ashoka.ui.auth.name_number"
        android:label="name_number" >
        <action
            android:id="@+id/action_name_number_to_aadhaar_email"
            app:destination="@id/aadhaar_email" />
        <action
            android:id="@+id/action_name_number_to_pwd_login"
            app:destination="@id/pwd_login" />
    </fragment>
    <fragment
        android:id="@+id/pwd_signup"
        android:name="com.example.ashoka.ui.auth.pwd_signup"
        android:label="pwd_signup" >
        <action
            android:id="@+id/action_pwd_signup_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/pwd_login"
        android:name="com.example.ashoka.ui.auth.pwd_login"
        android:label="pwd_login" />


</navigation>