<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margins"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margins">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/farmer_name_land"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_value"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:id="@+id/farmer_land_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_id"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:id="@+id/farmer_area_land"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_value"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:id="@+id/farmer_location_land"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_value"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:id="@+id/farmer_profits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profits"
                    android:textSize="@dimen/heading_size" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            app:cardCornerRadius="@dimen/margins">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margins"
                        android:text="@string/what_crops_i_grow"
                        android:textSize="@dimen/Text_size" />

                    <!--                    <Spinner-->
                    <!--                        android:id="@+id/spin_list_food"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_alignParentEnd="true" />-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv"
                        android:id="@+id/cv_add_crop"
                        android:background="@color/base_background">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"
                            android:text="@string/add_crop" />


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_food_amt_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_food_amt" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="@dimen/margins"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_style"
            android:text="@string/buy_inputs" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>